Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1010,6 +1010,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 
+\begin{comment}
 
 \subsection{1A}: Optimize reduced neuron models with respect to data from four different neuron types, using two different classes of models. Optimize neuron models to create agreement with electrophysiological measurements.
 \subsection{1B:} Validate the optimization approach using analysis of variance in many pre existing models and experimental data together. Test how well optimized models mimic experimental data relative to pre-existing models and data. 
@@ -1017,11 +1018,11 @@
 \subsection{2A:} Using large, publicly available datasets for neuron classes, we will characterize region-specific differences and evaluate neuron-type models for agreement with experimental data.
 \subsection{2B:} Using models of neuron-types from different cortical regions we will identify the features underlying differences among neuron types and across regions, as well as the biophysical mechanisms that underlie those features. 
 
-    
+\end{comment}
 
 
 \section{Further Validation of Optimized Models}
-Models can continue to undergo validation checks subsequent to optimiztion. One way to do this is to move from a single spiking stimulus regime, to a multispiking regime, and then use different feature extraction libraries using a much larger number of features. 
+Models can continue to undergo validation checks subsequent to optimization. One way to do this is to move from a single spiking stimulus regime, to a multispiking regime, and then use different feature extraction libraries using a much larger number of features. 
 The higher dimensional feature space can be reduced to a low dimensional space, where it is eaasier to discriminate between models and data.
 
 Agreement between the optimized.
