push to overleaf

--- a/template_files/like_template/dissertation_template_latex.tex
+++ b/template_files/like_template/dissertation_template_latex.tex
@@ -935,7 +935,7 @@
 %\clearpage                             %~If you don't wish to display the heading
                                         %   'Dedication', comment out the previous line
                                         %   and use this one instead.
-\input{sample_dedication}               %<Enter the name of the .tex file containing your
+%\input{sample_dedication}               %<Enter the name of the .tex file containing your
                                         %   your dedication or omit this line and type in
                                         %   your dedication here.
 
