--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \usepackage{microtype}                  %~Improves kerning and protrusion (optional);
                                         %   See here for an :
                                         %   http://www.khirevich.com/latex/microtype/
+\usepackage[smartEllipses]{markdown}
 
 \providetoggle{usemicrotype}            % TRUE = microtype is being used
 \makeatletter                           %   (Used to turn of microtype protrusion in the
