Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -50,9 +50,9 @@
                                         %   the oral defense
 \listadd{\committeechair}{Chair Name}   %<Enter committee chair name; use \listadd for
 %\listadd{\committeechair}{Another name}%   for additional names
-\newcommand*{\chairlabel}{Prof S Crook}        %<If you have co-chairs, replace this text with
+\newcommand*{\chairlabel}{Prof R Gerkin}        %<If you have co-chairs, replace this text with
                                         %   'Co-Chair'
-\listadd{\committeemember}{Prof R Gerkin} %<Enter committee member names; use \listadd for
+\listadd{\committeemember}{Place Holder} %<Enter committee member names; use \listadd for
 \listadd{\committeemember}{Member Name} %   additional names
 \newcommand*{\gradmonth}{Month}         %<Enter the graduation date; month can only be:
                                         %  May, August, or December
