--- a/cortical_model_data_agreement.tex
+++ b/cortical_model_data_agreement.tex
@@ -146,8 +146,8 @@
     \renewcommand{\LaTeX}{\textrm{\Oldlatex}}
     % Document parameters
     % Document title
-    \title{cortical\_model\_data\_agreement}
-    
+    \title{Cortical Model and Cortical Experiment Agreement}
+    \date{} 
     
     
     
@@ -366,14 +366,13 @@
 \begin{document}
     
     \maketitle
+    \date{} 
     
     
 
     
-            \begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
-\begin{Verbatim}[commandchars=\\\{\}]
-(1276, 47)
-\end{Verbatim}
+\begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
+
 \end{tcolorbox}
         
     Models and Data can agree and disagree in many different ways. Given
@@ -383,10 +382,8 @@ disagreement there are as this knowledge answers another question, in
 excitable cortical neuron models which wave form features would be the
 best targets of optimization work to optimize?
 
-            \begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
-\begin{Verbatim}[commandchars=\\\{\}]
-[Text(0,0.5,'2nd EigenVector'), Text(0.5,0,'1st EigenVector')]
-\end{Verbatim}
+\begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
+
 \end{tcolorbox}
         
     \begin{center}
@@ -395,9 +392,7 @@ best targets of optimization work to optimize?
     { \hspace*{\fill} \\}
     
             \begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
-\begin{Verbatim}[commandchars=\\\{\}]
-<matplotlib.legend.Legend at 0x1323319e8>
-\end{Verbatim}
+
 \end{tcolorbox}
         
     \begin{center}
@@ -438,8 +433,8 @@ best targets of optimization work to optimize?
     min\_AHP\_indices\_1.5x efel feature
 
     
-    sources of disagreement
 
+    \section{Everything Exhaustively}
     
     fast\_trough\_index\_1.5x allen feature
 
@@ -470,13 +465,5 @@ best targets of optimization work to optimize?
     \section{Disagreement}\label{disagreement}
 
     \section{Everything Exhaustively}\label{everything-exhaustively}
-
-    Two good experiments to optimize against, as it seems closer to models.
-\textbf{"Layer 4 aspiny 313862167",} \textbf{"Layer 4 spiny 479728896",}
-
-
-    % Add a bibliography block to the postdoc
-    
-    
     
 \end{document}
