--- a/main.tex
+++ b/main.tex
@@ -1002,9 +1002,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 
-
-\include{body}
 \include{cortical_model_data_agreement}
+
+%\include{body}
 
 
 
