--- a/body.tex
+++ b/body.tex
@@ -4,11 +4,16 @@
 \section{Introduction}
 
 \subsection{Model  Optimization with NeuronUnit}
-Some neural properties can’t be easily measured in experiments. These unknown properties hamper modeling accuracy and require parameter fitting. For example, a common approach for approximating unknown ion channel densities is to ‘optimize’ the governing equations to match known waveforms. The process of optimization involves what is known as an ‘inverse’ problem where we efficiently and sparsely search for the ‘optimal’ value of an parameter that satisfies the system of equations. Computational optimization techniques are generally specific to a particular type of problem rather than being generalized. However, several notable algorithms have solved a wide range of problems including non-dominated sort 2 (NSGA2) and stochastic gradient descent (SGD). The popularity of these two algorithms relies on the ability to avoid falsely reporting a local minimum as the most optimal solution. However, of SGD and NSGA2, only NSGA2 is a natural choice for tackling multi-objective optimization problems. Default implementations of SGD are not able to utilize the principle of non-domination as an optimization strategy.%%
+Some neural properties can’t be easily measured in experiments. These unknown properties hamper modeling accuracy and require parameter fitting. For example, a common approach for approximating unknown ion channel densities is to ‘optimize’ the governing equations to match known waveforms. The process of optimization involves what is known as an ‘inverse’ problem where we efficiently and sparsely search for the ‘optimal’ value of an parameter that satisfies the system of equations. Often an optimal value is corresponds to a global minimum or maximum value of a cost function.\\*
+
+Computational optimization techniques are generally specific to a particular type of problem rather than being generalized. However, several notable algorithms have solved a wide range of problems including genetic and algorithms and stochastic gradient descent (SGD). The popularity of these two algorithms is due to their robustness. NSGA2 and SGD are able to avoid falsely reporting a local minimum when a more optimal solution is available. 
+\Subsection{Multiobjective optimization} Multi objective optimization problems are a subset of optimization problems, where model fitness is evaluated against multiple independent constraints, rather than just one error. It is often possible to reduce multiple constraints into one constraint by summing the outputs of objective functions together, however the price of reducing multiple errors into one error, is that where multiple and diverse models give satisfactory solutions to the provided constraint, reducing error leads to a situation where a constraint that is easier to satisfy, rapidly drags down the error score and dominates the error by contributing lower errors to the sum of error scores.
+
+However, of SGD and NSGA2, only NSGA2 is a natural choice for tackling multi-objective optimization problems. Default implementations of SGD are not able to utilize the principle of non-domination as an optimization strategy.%%
 %%
 There is a great diversity of real biological neurons, all of which differ substantially in their electrical behavior. There are a few different classes of general purpose neuronal models, that can reproduce these different types of electrical behaviours, given appropriate parameterizations of the models.\newline
 \newline
-An exisiting class of neuron model type, called The Izhikevich model was published with parameter sets believed to make the model outputs accurately align with a variety of real biological cell outputs. However since publication much very specific electro physiological recordings have accumulated, that in someways undermine model/experiment agreement. However it is now possible to constrain the Izhikevich model and find new parameterizations that more allow us to more accurately reproduce more recently published experimental data.\newline
+An exisiting class of neuron model type, called The Izhikevich model was published with parameter sets believed to make the model outputs accurately align with a variety of real biological cell outputs. However since publication much more specific electrophysiological recordings have accumulated, that give reason to perform a reevaluation of model/experiment agreement.  It is now possible to constrain the Izhikevich model and find new parameterizations that more allow us to more accurately reproduce more recently published experimental data.\newline
 \newline
 NeuronUnit easily converts a quantitative measure of model/data agreement into a useful error signal. A very natural application of this signal is to guide the process of optimization. We have used Neuronunit to guide optimization by taking a flexible model type such as a generalized linear integrate and fire model or the Izhikevich model and constraining the model against relevant experimental data. As an example, NSGA2 was used to optimize models in conjunction with data driven tests based on pooled data from NeuroElectro.org. A variety of compact and fast single compartment models were used to explore model optimization. Figure 4 demonstrates test error at the beginning of the optimization process for models with randomly sampled parameters and the smaller error following optimization. Figure 5 shows the evolution of the error during the optimization process. \newline
 \newline
@@ -38,7 +43,14 @@ In practice, open access data is not always useable, as it be derived from multi
 The large-scale meta-analysis described here has not been performed previously. For the first time, a large number of cortical neuron and neuronal network models are available in the standardized NeuroML format. Although the Allen Institute for Brain Science modeling project and the Blue Brain project both rigorously analyzed their single cell models, there has not been an overarching meta-analysis across different cell and network model sources. Similarly, numerous modeling efforts have employed data-driven testing in model development workflows, but all these efforts have been based on non-standard ‘in-house’ model types and execution environments. In contrast, this work proposes to expand a pre-existing standardized model testing space, NeuronUnit, that supports model validation and re-use regardless of the model source. To date various NeuronUnit tests of action potential shape, electrical properties, and single cell morphologies exist; yet these tools are not unified. Some tests of network dynamics also currently exist; however, these tests are not integrated into a unified multiscale workflow. Significantly, a unified workflow would better locate errors in network behavior which are manifest at the network level but are caused by neuron-type models. \newline
 \newline
 
+% this needs to be an include file.
 \subsection{Approach}
+% allow a,b,c,d to vary only
+%* what is inside this.
+%*
+%*
+%*
+
 Many sophisticated, experimentally informed models of neurons and neuronal networks exist, yet these models are limited to the target neuron class and brain region they were designed to explain. There is a scientific and economical mandate to increase the usability of existing models and data; however, it is unknown whether models developed for a particular cortical area can be re-parameterized to model a different cortical region. A systematic and thorough comparison of neuron model behavior has not been performed, and it is unknown how differently classes of models behave relative to one another and different data. We seek to widen the range of valid model re-purposing by examining relationships across hundreds of cortical neurons, across neuron type models, and by comparing these models to experimental data.\newline
 \newline
 Model formats and simulation software: This project will rely on NeuroML, a community-developed format for describing multiscale models in neuroscience supported by over 40 downstream applications, including simulators, databases, and tools for analysis and 
@@ -49,10 +61,18 @@ Models can continue to undergo validation checks subsequent to optimization. One
 
 \section{Further Validation of Optimized Models}
 Models can continue to undergo validation checks subsequent to optimization. One way to do this is to move from a single spiking stimulus regime, to a multispiking regime, and then use different feature extraction libraries using a much larger number of features. 
-%Models can continue to undergo validation checks subsequent to optimization. One way to do this is to move from a single spiking stimulus regime, to a multispiking regime, and then use different feature extraction libraries using a much larger number of features. 
-%The higher dimensional feature space can be reduced to a low dimensional space, where it is eaasier to discriminate between models and data.
+Models can continue to undergo validation checks subsequent to optimization. One way to do this is to move from a single spiking stimulus regime, to a multispiking regime, and then use different feature extraction libraries using a much larger number of features. 
+
+The higher dimensional feature space can be reduced to a low dimensional space, where it is easier to discriminate between models and experimental data.
+
+\begin{itemize}
+\item[--] 
+\item[--] 
+\end{itemize}
+
+
 \Section{Sensitivity Analysis and NeuronUnit Error Correlation}
-Sensitivity Analysis was performed using three different combinations of model, with just one data driven suite of neuronunit tests. Sensativity analysis gives some indication of the difficulty of optimization problems.\newline
+Sensitivity Analysis was performed using the izhikitch model different combinations of model, with just one data driven suite of neuronunit tests. Sensitivity analysis gives some indication of the difficulty of optimization problems.\newline
 \newline
 Sensitivity Analysis was able to reveal if model parameters had second order effects, that is is the model behavior dependant on not just the single parameter, but also a second intermediary parameter, and this parameter. \newline
 \newline
